# CountApi

android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/dconeybe/countapi/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dconeybe/countapi/: AggregateField.java  AggregateQuery.java  AggregateQuerySnapshot.java  AggregateSource.java  CountApi.java  CountApi.kt  CountApiDemo.java  CountApiDemo.kt  Query.java
android/app/src/main/java/com/dconeybe/countapi/firestore/: Blob.java  CollectionReference.java  DocumentReference.java  FieldPath.java  FirebaseFirestore.java  GeoPoint.java  Query.java  QuerySnapshot.java  ServerTimestampBehavior.java  SnapshotMetadata.java  Task.java  Timestamp.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/dconeybe/countapi/: CountApiDemo.java  CountApiDemo.kt  ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
ios/: CMakeLists.txt  CountApi.m
ios/countapi/: AppDelegate.swift  CountApi.h  CountApi.m  CountApiDemo.m  FirestoreTypes.h  SceneDelegate.swift  ViewController.swift  countapi-Bridging-Header.h
ios/countapi.xcodeproj/: project.pbxproj
ios/countapi.xcodeproj/xcshareddata/xcschemes/: countapi.xcscheme  countapiTests.xcscheme
ios/countapiTests/: CountApiDemo.m  CountApiDemo.swift  countapiTests-Bridging-Header.h  countapiTests.swift
js/: .gitignore  CountApi.ts  CountApiDemo.ts  FirestoreTypes.ts  index.ts  package.json
node/: CountApi.d.ts  CountApiDemo.ts  package.json
